wip - fixing bug on CompareAction